--- a/src/main/webapp/WEB-INF/views/board/usr.comments.jspf
+++ b/src/main/webapp/WEB-INF/views/board/usr.comments.jspf
@@ -11,7 +11,7 @@
 		        	<b style="color:#764ba2;">${comment.user.userName}</b>  |  
 		        	<span class="createdDt">${comment.createdAt}</span>
 		        	<c:if test="${comment.user.id == post.author.id}"> <!-- 게시글 작성자가 작성한 댓글은 '작성자' 표시 -->
-					    <span style="color:white; background-color:green; font-size:12px; font-weight:normal; margin-left: 5px;">작성자</span>
+					    <span style="color:white; background-color:green; font-size:12px; font-weight:normal; margin-left: 5px; padding:2px 6px; border-radius:8px;">작성자</span>
 					</c:if>
 		        	<br>
 		        	<div id="view-mode-${comment.id}">
@@ -69,7 +69,7 @@
 		                        </b>
 		                        <span class="createdDt"> | ${reply.createdAt}</span>
 		                        <c:if test="${reply.user.id == post.author.id}"> <!-- 게시글 작성자가 작성한 대댓글은 '작성자' 표시 -->
-								    <span style="color:white; background-color:green; font-size:12px; font-weight:normal; margin-left: 5px;">작성자</span>
+								    <span style="color:white; background-color:green; font-size:12px; font-weight:normal; margin-left: 5px; padding:2px 6px; border-radius:8px;">작성자</span>
 								</c:if>
 		                        <br>
 		                        <div id="view-mode-${reply.id}">
@@ -129,7 +129,7 @@
 		                                </b>  |  
 		                                <span class="createdDt">${subReply.createdAt}</span>
 		                                <c:if test="${subReply.user.id == post.author.id}"> <!-- 게시글 작성자가 작성한 대대댓글은 '작성자' 표시 -->
-										    <span style="color:white; background-color:green; font-size:12px; font-weight:normal; margin-left: 5px;">작성자</span>
+										    <span style="color:white; background-color:green; font-size:12px; font-weight:normal; margin-left: 5px; padding:2px 6px; border-radius:8px;">작성자</span>
 										</c:if>
 		                                <br>
 		                                <div id="view-mode-${subReply.id}">
